fixed spacing issue maybe

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,10 +9,11 @@ body {
   color: #000000;
   background: url('OcunanandMartin.png') no-repeat center center;
   background-attachment: fixed;
-  background-position: relative;
+  margin: 0;
+  padding: 0;
+  height: 100%;
   background-size: cover;
-  transform: translateZ(-1) scale(2);
-  z-index: -1;
+  overflow: auto;
 }
 
 body, html {
@@ -69,8 +70,6 @@ h1 {
   background-size: cover;
   width: 100%;
   height: 100%;
-  transform: translateZ(-1) scale(2);
-  z-index: -1;
 }
 
 .spacer {
@@ -80,8 +79,6 @@ h1 {
   background-position: relative;
   background-repeat: no-repeat;
   background-size: cover;
-  transform: translateZ(-1) scale(2);
-  z-index: -1;
 }
 
 .right-aligned-image {
@@ -217,10 +214,10 @@ tr:nth-child(2n) td {
 }
 
 tr:nth-child(odd) {
-  background-color: rgba(255, 255, 255, 0.7); 
+  background-color: rgba(255, 255, 255, 0.2); 
 }
 tr:nth-child(even) {
-  background-color: rgba(0, 0, 0, 0.5); 
+  background-color: rgba(0, 0, 0, 0.2); 
 }
 
 th {
